--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -61,7 +61,7 @@ main_menu:
   enable: true
   align: l
   show_logo: true
-  show_language: false
+  show_language: true
   show_day_night: true
   show_search: true
   highlight_active_link: true
@@ -113,7 +113,7 @@ avatar:
   gravatar: false
   shape: circle
 publications:
-  date_format: January 2006
+  date_format: 2006/01
   citation_style: apa
 projects:
   post_view: 2
