--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -147,13 +147,13 @@ map:
   api_key: ''
   zoom: 15
 marketing:
-  google_analytics: 'G-5BXTJSSN1E'
+  google_analytics: ''
   google_tag_manager: ''
   google_site_verification: ''
   baidu_site_verification: ''
   baidu_tongji: ''
 cms:
-  branch: master
+  branch: main
   local_backend: false
 icon:
   pack:
