--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,4 +1,3 @@
-theme: "starter-hugo-academic"
 # Configuration of Hugo
 # Guide: https://wowchemy.com/docs/getting-started/
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
@@ -6,7 +5,6 @@ theme: "starter-hugo-academic"
 
 title: "Tianxiang's Homepage" # Website name
 baseurl: 'https://cuitx.netlify.app/' # Website URL
-copyright: '© {year} CUI Tianxiang' # Footer text, e.g. '© {2022} Cui Tianxiang'
 
 ############################
 ## LANGUAGE
@@ -75,4 +73,6 @@ related:
     - name: categories
       weight: 70
 security:
+  _merge: deep
+sitemap:
   _merge: deep
