--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -140,7 +140,10 @@ extensions:
     local_backend: false
   academicons:
     enable: true
-
+    
+[icon.pack]
+  ai = true
+  
 security:
   # Allow frame for embedding speaker notes in slides
   allow_frame: true
