--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -17,8 +17,17 @@ main:
     url: '#talks'
     weight: 45
   - name: Publications
-    url: publication
+    url: '#publications'
     weight: 50
+  - name: Skills
+    url: '#skills'
+    weight: 15
+  - name: Contact
+    url: '#contact'
+    weight: 70
+  - name: Topics
+    url: '#tags'
+    weight: 60
   - name: Experience
     url: '#experience'
     weight: 20
