--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -17,7 +17,7 @@ main:
     url: '#talks'
     weight: 45
   - name: Publications
-    url: '#project'
+    url: '#publications'
     weight: 50
   - name: Skills
     url: '#skills'
