--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -20,7 +20,7 @@ main:
     url: '#publications'
     weight: 50
   - name: Skills
-    url: '#skills'
+    url: 'skills'
     weight: 15
   - name: Contact
     url: '#contact'
