--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -19,9 +19,9 @@ main:
   - name: Publications
     url: '#publications'
     weight: 50
-  - name: Skills
-    url: 'skills'
-    weight: 15
+  # - name: Skills
+  #  url: '#skills'
+  #  weight: 15
   - name: Contact
     url: '#contact'
     weight: 70
