--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -19,9 +19,9 @@ main:
   - name: Publications
     url: '#publications'
     weight: 50
-  # - name: Skills
-  #  url: '#skills'
-  #  weight: 15
+  - name: Skills
+    url: '#skills'
+    weight: 15
   - name: Contact
     url: '#contact'
     weight: 70
@@ -29,5 +29,5 @@ main:
     url: '#tags'
     weight: 60
   - name: Experience
-    url: 'experience'
+    url: '#experience'
     weight: 20
