--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,7 +13,7 @@ main:
   # - name: Projects
   #   url: '#projects'
   #   weight: 30
-  - name: Talks
+  - name: Slides
     url: '#talks'
     weight: 45
   - name: Publications
