--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,9 @@ main:
   - name: About
     url: '#about'
     weight: 10
-  # - name: Blogs
-  #   url: '#posts'
-  #   weight: 20
+  - name: Blogs
+    url: '#posts'
+    weight: 20
   # - name: Projects
   #   url: '#projects'
   #   weight: 30
